# bridge-nvidia-hack

./: .env.example  .gitignore  README.md  bridge-implementation-plan.md  bridge-product-spec.md  docker-compose.yml
apps/web/: index.html  package-lock.json  package.json  vite.config.ts
apps/web/src/: App.tsx  styles.css  types.ts
data/: sources.yml
data/fixtures/: demo_scenario.json
docs/: data-sources.md  demo-script.md  integration-runbook.md  model-runtime.md  parallel-agent-workflow.md  pre-hardware-checklist.md
scripts/: ingest_corpus.py  run_demo_mode.py  smoke_models.py  validate_offline.sh
services/api/: Dockerfile  pyproject.toml
services/api/bridge/: __init__.py  config.py  main.py
services/api/bridge/agents/: interpreter.py  policy.py  question.py  record.py
services/api/bridge/audio/: __init__.py  demo.py  providers.py
services/api/bridge/bus/: __init__.py  events.py
services/api/bridge/demo/: __init__.py  runner.py
services/api/bridge/rag/: __init__.py  cards.py  corpus.py  retriever.py
services/api/bridge/records/: __init__.py  renderer.py
services/api/tests/: test_api_demo.py  test_demo_mode.py  test_events.py  test_interpreter.py  test_policy_rag.py  test_question_record.py
