[project]
name = "bridge-api"
version = "0.1.0"
description = "Local-first multi-agent public-service appointment assistant API"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pyyaml>=6.0.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
  "httpx>=0.27.0",
  "ruff>=0.6.0"
]

[tool.ruff]
line-length = 100
